# starlette-compress

./: .editorconfig  .gitignore  README.md  pyproject.toml  shell.nix
.github/workflows/: deploy.yaml  test.yaml  workflow.yaml
starlette_compress/: __init__.py  _brotli.py  _gzip.py  _identity.py  _utils.py  _zstd.py  _zstd_legacy.py
tests/: conftest.py  test___init__.py
